# transpipe

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-image.yml
pipeline/: celerybeat-schedule
pipeline/core/: admin.py  exceptions.py  middleware.py  urls.py  utils.py  views.py
pipeline/core/fixtures/: basetenants.json
pipeline/core/migrations/: 0001_initial.py  0002_auto_20201123_1420.py  0003_auto_20201204_0145.py  0004_auto_20201204_0200.py  0005_auto_20210105_0143.py  0006_transpipeuser_tenants.py  0007_tenant_all_courses_visible.py  0008_transpipeuser_initials.py  0009_auto_20210903_0222.py  0010_auto_20210903_0227.py  0011_auto_20210907_0230.py  0012_auto_20220617_1254.py  0013_tenant_deepl_active.py  0014_auto_20230213_0505.py  0015_tenant_audescribe_active.py
pipeline/core/models/: __init__.py  tenant.py  user.py
pipeline/core/tasks/: __init__.py
pipeline/mooclink/: apps.py  urls.py
pipeline/mooclink/services/: __init__.py  aws_translation_service.py  deepl_translation_service.py  periodic_task_service.py  status_change_service.py
pipeline/mooclink/templatetags/: utils.py
pipeline/mooclink/views/: course.py  couse_video_bulkaction.py  main.py  service_provider_usage.py  subtitle_action.py  video.py
pipeline/pipeline/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pipeline/subtitles/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
pipeline/subtitles/api/: __init__.py  aws_api.py  libtlp.py  (+5 more)
(+93 files in other folders)
