[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["openHPI Team <openhpi-info@hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.18"
requests = "^2.31.0"
django-embed-video = "^1.4.9"
sentry-sdk = "^1.41.0"
boto3 = "^1.34.58"
django-cleanup = "^8.1.0"
webvtt-py = "^0.4.6"
celery = {extras = ["pyamqp", "redis"], version = "^5.3.6"}
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
opencv-python = "^4.9.0.80"
django = "^4.2.11"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
